WW-416: configuration switch to reload i18n resouce bundles