@@ -68,7 +68,7 @@ public class DispatcherUtils {
     protected boolean paramsWorkaroundEnabled = false;
 
     protected DispatcherUtils(ServletContext servletContext) {
-        boolean reloadi18n = new Boolean((String) Configuration.get("webwork.i18n.reload")).booleanValue();
+        boolean reloadi18n = Boolean.valueOf((String) Configuration.get("webwork.i18n.reload")).booleanValue();
         LocalizedTextUtil.setReloadBundles(reloadi18n);
 
         if (Configuration.isSet("webwork.objectFactory")) {
